bad example of an allsorts commit

--- a/_posts/2015-02-21-api.md
+++ b/_posts/2015-02-21-api.md
@@ -5,4 +5,6 @@ category: ref
 date: 2015-02-21 15:41:07
 ---
 
+You could totally write some API reference documentation here.
 
+If you're using something like [JSON Schema](http://json-schema.org/), [RAML - RESTful API modeling language](http://raml.org/), or something similar, automating documentation gets pretty interesting.
