--- a/_posts/2015-02-21-setup.md
+++ b/_posts/2015-02-21-setup.md
@@ -3,6 +3,9 @@ layout: page
 title: "Setup"
 category: guide
 date: 2015-02-21 15:39:29
+order: 1
 ---
 
+Setting up your environment is easy. Read me article for the details.
 
+Clone the original [Jekyll Docs Template](https://github.com/bruth/jekyll-docs-template/) project on GitHub rather than this one, to make sure you have the latest features and fixes.
